--- a/assets/modeling.bib
+++ b/assets/modeling.bib
@@ -1,12 +1,24 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for zief0002 at 2023-07-28 10:23:26 -0500 
+%% Created for zief0002 at 2023-10-26 07:26:34 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inbook{thisted2,
+	address = {Washington, DC},
+	author = {R. A. Thisted and P. F. Velleman},
+	booktitle = {Perspectives on contemporary statistics, {MAA} Notes No. 21},
+	date-added = {2023-10-26 07:26:30 -0500},
+	date-modified = {2023-10-26 07:26:30 -0500},
+	editor = {D. C. Hoaglin and D. S. Moore},
+	pages = {41--53},
+	publisher = {Mathematical Association of America},
+	title = {Computers and modern statistics},
+	year = {1992}}
 
 @book{Keith:2015,
 	address = {New York},
